Clean up `ActiveDirectoryJCasCCompatibilityFIPSModeShortPasswordTest`